[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "REDEYESdontcry"
version = "0.1.0"
description = "Red team TUI framework with local LLM automation and horror-themed ASCII art."
readme = "docs/README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "REDEYESdontcry Team"}]
dependencies = [
  "rich>=13.7.0",
  "requests>=2.31.0",
  "jinja2>=3.1.2",
  "python-dateutil>=2.8.2",
  "dnspython>=2.6.1",
  "python-nmap>=0.7.1",
  "scapy>=2.5.0",
  "lxml>=4.9.4",
  "beautifulsoup4>=4.12.3",
  "pillow>=10.2.0",
  "plotly>=5.22.0",
  "PyPDF2>=3.0.1",
  "python-magic>=0.4.27",
  "pyfiglet>=0.8.post1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.3.0",
  "flake8>=7.0.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
redeyes = "redeyes.cli:main"

